# Show-and-Tell

./: .editorconfig  .lefthook.yaml  .mise.toml  Readme.md  pyproject.toml
.github/workflows/: pylint.yml
